--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,8 +1,11 @@
 ---
 import BaseHead from '../components/BaseHead.astro';
-import Header from '../components/Header.astro';
-import Footer from '../components/Footer.astro';
 import { SITE_TITLE, SITE_DESCRIPTION } from '../consts';
+
+import { Image } from 'astro:assets';
+import profilePicture from '../images/retrato_retiro_the_fathers_house.png';
+import CopyButton from "../components/CopyButton.astro";
+
 ---
 
 <!doctype html>
@@ -10,41 +13,99 @@ import { SITE_TITLE, SITE_DESCRIPTION } from '../consts';
 	<head>
 		<BaseHead title={SITE_TITLE} description={SITE_DESCRIPTION} />
 	</head>
-	<body>
-		<Header />
-		<main>
-			<h1>🧑‍🚀 Hello, Astronaut!</h1>
-			<p>
-				Welcome to the official <a href="https://astro.build/">Astro</a> blog starter template. This
-				template serves as a lightweight, minimally-styled starting point for anyone looking to build
-				a personal website, blog, or portfolio with Astro.
-			</p>
-			<p>
-				This template comes with a few integrations already configured in your
-				<code>astro.config.mjs</code> file. You can customize your setup with
-				<a href="https://astro.build/integrations">Astro Integrations</a> to add tools like Tailwind,
-				React, or Vue to your project.
-			</p>
-			<p>Here are a few ideas on how to get started with the template:</p>
-			<ul>
-				<li>Edit this page in <code>src/pages/index.astro</code></li>
-				<li>Edit the site header items in <code>src/components/Header.astro</code></li>
-				<li>Add your name to the footer in <code>src/components/Footer.astro</code></li>
-				<li>Check out the included blog posts in <code>src/content/blog/</code></li>
-				<li>Customize the blog post page layout in <code>src/layouts/BlogPost.astro</code></li>
-			</ul>
-			<p>
-				Have fun! If you get stuck, remember to <a href="https://docs.astro.build/"
-					>read the docs
-				</a> or <a href="https://astro.build/chat">join us on Discord</a> to ask questions.
-			</p>
-			<p>
-				Looking for a blog template with a bit more personality? Check out <a
-					href="https://github.com/Charca/astro-blog-template"
-					>astro-blog-template
-				</a> by <a href="https://twitter.com/Charca">Maxi Ferreira</a>.
-			</p>
-		</main>
-		<Footer />
+	<body class=`
+		flex flex-col gap-6
+		bg-gray-100 p-12
+	`>
+		<div class=`flex flex-col lg:flex-row gap-12`>
+			<Image src={profilePicture} alt="Profile photo" class=`
+				w-full lg:w-96
+				aspect-square object-cover object-bottom lg:aspect-auto
+			`/>
+
+			<div class=`flex flex-col gap-6`>
+				<h1>Hola, soy Diego Hernández</h1>
+
+				<p>Un universitario católico de 20 años que necesita tu ayuda para vivir SEEK 2025.</p>
+
+				<button id="ctaButton" class=`p-6 bg-blue-600 text-white`>
+					<p>Donar</p>
+				</button>
+			</div>
+		</div>
+
+		<!-- Popup -->
+		<div class=`
+			popup
+			hidden inset-0 bg-black/20 backdrop-blur-sm
+			flex items-center justify-center lg:p-6
+		`>
+			<div class=`
+				content
+				absolute bottom-0 lg:bottom-auto w-full max-w-xl
+				translate-y-96 
+				duration-300
+				lg:w-2/3
+				bg-white p-6 pb-12 lg:p-12
+				rounded-t
+				flex flex-col gap-6
+			`>
+				<h3>
+					Moneypool
+				</h3>
+
+				<p class="text-sm">
+					Puedes donar con tu tarjeta bancaria directamente, a través de Moneypool.
+				</p>
+
+				<a href="https://www.moneypool.mx/p/IeBnElA" target="_blank">
+					<button class="border-2 border-solid border-black">
+						<p>Ir a Moneypool</p>
+					</button>
+				</a>
+
+				<h3>Transferencia bancaria</h3>
+
+				<p class="text-sm">
+					Puedes depositarme a mi cuenta personal. En la descripción de la transferencia, pon tu nombre y el texto 'SEEK' para poder agradecerte.
+				</p>
+
+				<p>CLABE: <span class="code">012 180 01525621081 9</span></p>
+				<CopyButton text="Copiar la CLABE" value="012180015256210819" />
+			</div>
+		</div>
+
+		<script>
+			const popup = document.querySelector('.popup');
+			const content = popup?.querySelector('.content');
+
+			const togglePopup = () => {
+				if (!popup || !content) {
+					return;
+				}
+
+				if (popup.classList.contains('hidden')) {
+					popup.classList.replace('hidden', 'absolute');
+					setTimeout(() => {
+						content.classList.replace('translate-y-96', 'translate-y-0');
+					}, 0)
+				} else {
+					content.classList.replace('translate-y-0', 'translate-y-96');
+					setTimeout(() => {
+						popup.classList.replace('absolute', 'hidden');
+					}, 200);
+				}
+			}
+
+			const ctaButton = document.getElementById('ctaButton');
+			ctaButton?.addEventListener('click', togglePopup);
+			popup?.addEventListener('click', (event) => {
+				if (event.target && (event.target as HTMLElement).classList.contains('popup')) {
+					togglePopup();
+				} else {
+					event.stopPropagation();
+				}
+			})
+		</script>
 	</body>
 </html>
