But fix on the popup and little aesthetic changes

--- a/src/components/Carousel.astro
+++ b/src/components/Carousel.astro
@@ -9,10 +9,10 @@ interface Props {
 const { images } = Astro.props;
 ---
 <div class=`
-    flex gap-6 flex-nowrap overflow-x-auto
+    flex gap-3 flex-nowrap overflow-x-auto
     -mx-6 lg:mx-0 px-6 lg:px-0
 `>
     {
-        images.map(item => <Image src={item} alt="" class="h-96 min-w-max" />)
+        images.map(item => <Image src={item} alt="" class="h-72 lg:h-96 min-w-max max-w-full" />)
     }
 </div>
