--- a/src/components/Container.astro
+++ b/src/components/Container.astro
@@ -1,10 +1,12 @@
 ---
 interface Props {
     asCallout?: boolean,
+    id?: string,
+    class?: string,
 }
-const { asCallout = false } = Astro.props;
+const { asCallout = false, id= '', class: className } = Astro.props;
 ---
 
-<div class=`flex flex-col gap-6 w-full text-justify ${ asCallout && 'bg-gray-100 p-6 rounded' }`>
+<div id={id} class=`${ className } flex flex-col gap-6 w-full text-justify ${ asCallout && 'bg-gray-100 p-6 rounded' }`>
     <slot />
 </div>
