--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -9,6 +9,7 @@ import Cont from "../components/Container.astro";
 import Carousel from "../components/Carousel.astro";
 import ExpensesDisplay from "../components/ExpensesDisplay.astro";
 import GoalDisplay from "../components/GoalDisplay.astro";
+import L from '../components/Link.astro';
 
 const images_seek24 = Array.from(await Astro.glob('../images/seek24/*.{jpg, jpeg, png}')).map(i => i.default);
 const images_semestre = Array.from(await Astro.glob('../images/semestre/*.{jpg,jpeg,png}')).map(i => i.default);
@@ -45,38 +46,45 @@ const images_semestre = Array.from(await Astro.glob('../images/semestre/*.{jpg,j
 		<Cont asCallout={true}>
 			<h3>¿Qué es SEEK?</h3>
 			<p>
-				<a href="https://seek.focus.org/" target="_blank">SEEK</a> es la conferencia anual que organiza <a href="https://focus.org/" target="_blank">FOCUS</a> todos los años para reunir a miles de universitarios católicos durante una semana.
+				<L href="https://seek.focus.org/">SEEK</L> es la conferencia anual que organiza <L href="https://focus.org/">FOCUS Catholic</L> todos los años para reunir a decenas de miles de universitarios católicos. Durante 5 días, vivimos misa juntos, asistimos a charlas formativas y conocemos a universitarios de todo el continente. Este año, SEEK 2025 tendrá lugar del 1 al 5 de enero en Salt Lake, Utah, EUA.
 			</p>
 		</Cont>
 
-		<ExpensesDisplay client:load />
-		<GoalDisplay client:load />
+		<ExpensesDisplay />
+		<GoalDisplay />
 
 		<Cont>
 			<h3>SEEK 2024</h3>
 
 			<p>
-				Esto es un poco de lo que vivimos el año pasado en SEEK 2024.
+				El año pasado tuve la oportunidad de vivir SEEK 2024, que se llevó a cabo en Saint Louis, Missouri, EUA.
 			</p>
 
 			<Carousel images={images_seek24} />
-		</Cont>
-
-		<Cont>
-			<h3>Frutos del año pasado</h3>
 
 			<p>
 				Gracias a la manera en que Dios obró en mi corazón el año pasado durante SEEK 2024, pude recibir la gracia de:
 			</p>
 
 			<ul class="-mt-3">
-				<li>llevar un proceso de discernimiento vocacional</li>
+				<li>empezar un proceso de discernimiento vocacional</li>
 				<li>ser Director de Imagen para el grupo estudiantil de FOCUS en el Tecnológico de Monterrey</li>
+				<li>organizar eventos formativos y recreativos para la comunidad católica en campus</li>
 				<li>participar de un grupo de estudio bíblico y un grupo de discipulado</li>
-				<li>dirigir un grupo de estudio bíblico</li>
+				<li>dirigir mi propio grupo de estudio bíblico para hombres en el Tec</li>
 			</ul>
 
 			<Carousel images={images_semestre} />
+		</Cont>
+
+		<Cont asCallout={true}>
+			<h3>¿Quieres que ore por algo?</h3>
+			<p>Si quieres que ore por algo en especial durante SEEK 2025, llena el siguiente formulario para que lo pueda tener presente en mi oración.</p>
+			<L href="https://diegotec.notion.site/13be954db47680a4a3dfc1526aceb634?pvs=105">
+				<button class="border-2 border-blue-500">
+					Ir al formulario
+				</button>
+			</L>
 		</Cont>
 
 		<!-- Popup -->
