--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -26,10 +26,10 @@ const images_semestre = Array.from(await Astro.glob('../images/semestre/*.{jpg,j
 		max-w-4xl mx-auto
 		pb-24
 	`>
-		<div class=`flex flex-col lg:flex-row gap-6 w-full`>
+		<div class=`flex flex-col md:flex-row gap-6 w-full`>
 			<Image src={profilePicture} alt="Profile photo" class=`
-				w-full lg:w-64
-				aspect-square lg:aspect-auto object-cover object-bottom
+				w-full md:w-64
+				aspect-square md:aspect-auto object-cover object-bottom
 			`/>
 
 			<div class=`flex flex-col gap-6`>
