Updated URL and reordered a photo

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -80,7 +80,7 @@ const images_semestre = Array.from(await Astro.glob('../images/semestre/*.{jpg,j
 		<Cont asCallout={true}>
 			<h3>¿Quieres que ore por algo?</h3>
 			<p>Si quieres que ore por algo en especial durante SEEK 2025, llena el siguiente formulario para que lo pueda tener presente en mi oración.</p>
-			<L href="https://diegotec.notion.site/13be954db47680a4a3dfc1526aceb634?pvs=105">
+			<L href="https://diego-hdz.notion.site/13be954db47680a4a3dfc1526aceb634?pvs=105">
 				<button class="border-2 border-blue-500">
 					Ir al formulario
 				</button>
