Actualización de costos

--- a/src/components/ExpensesDisplay.astro
+++ b/src/components/ExpensesDisplay.astro
@@ -14,6 +14,11 @@ export const expenses: { label: string, color: string, data: number[]}[] = [
         data: [6500]
     },
     {
+        label: 'Hospedaje',
+        color: 'bg-sky-700',
+        data: [4500],
+    },
+    {
         label: 'Comida',
         color: 'bg-green-700',
         data: [6500]
