--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,18 +1,17 @@
 ---
 import BaseHead from '../components/BaseHead.astro';
-import { SITE_TITLE, SITE_DESCRIPTION } from '../consts';
+import {SITE_TITLE, SITE_DESCRIPTION, globalConfig} from '../customized/consts';
 
 import { Image } from 'astro:assets';
 import profilePicture from '../images/retrato_retiro_the_fathers_house.png';
 import CopyButton from "../components/CopyButton.astro";
 import Cont from "../components/Container.astro";
-import Carousel from "../components/Carousel.astro";
 import ExpensesDisplay from "../components/ExpensesDisplay.astro";
 import GoalDisplay from "../components/GoalDisplay.astro";
 import L from '../components/Link.astro';
 
-const images_seek24 = Array.from(await Astro.glob('../images/seek24/*.{jpg, jpeg, png}')).map(i => i.default);
-const images_semestre = Array.from(await Astro.glob('../images/semestre/*.{jpg,jpeg,png}')).map(i => i.default);
+import { Content as ThisYear} from '../customized/this_year.mdx';
+import { Content as LastSeek } from '../customized/last_seek.mdx';
 ---
 
 <!doctype html>
@@ -33,9 +32,9 @@ const images_semestre = Array.from(await Astro.glob('../images/semestre/*.{jpg,j
 			`/>
 
 			<div class=`flex flex-col gap-6`>
-				<h1>Hola, soy Diego Hernández</h1>
+				<h1>{ globalConfig.title }</h1>
 
-				<p>Un universitario católico de 20 años que necesita tu ayuda para vivir SEEK 2025.</p>
+				<p>{ globalConfig.subtitle }</p>
 
 				<button id="ctaButton" class=`p-6 bg-blue-600 text-white`>
 					Donar
@@ -54,38 +53,23 @@ const images_semestre = Array.from(await Astro.glob('../images/semestre/*.{jpg,j
 		<GoalDisplay />
 
 		<Cont>
-			<h3>SEEK 2024</h3>
+			<LastSeek />
 
-			<p>
-				El año pasado tuve la oportunidad de vivir SEEK 2024, que se llevó a cabo en Saint Louis, Missouri, EUA.
-			</p>
-
-			<Carousel images={images_seek24} />
-
-			<p>
-				Gracias a la manera en que Dios obró en mi corazón el año pasado durante SEEK 2024, pude recibir la gracia de:
-			</p>
-
-			<ul class="-mt-3">
-				<li>empezar un proceso de discernimiento vocacional</li>
-				<li>ser Director de Imagen para el grupo estudiantil de FOCUS en el Tecnológico de Monterrey</li>
-				<li>organizar eventos formativos y recreativos para la comunidad católica en campus</li>
-				<li>participar de un grupo de estudio bíblico y un grupo de discipulado</li>
-				<li>dirigir mi propio grupo de estudio bíblico para hombres en el Tec</li>
-			</ul>
-
-			<Carousel images={images_semestre} />
+			<ThisYear />
 		</Cont>
 
-		<Cont asCallout={true}>
-			<h3>¿Quieres que ore por algo?</h3>
-			<p>Si quieres que ore por algo en especial durante SEEK 2025, llena el siguiente formulario para que lo pueda tener presente en mi oración.</p>
-			<L href="https://diego-hdz.notion.site/13be954db47680a4a3dfc1526aceb634?pvs=105">
-				<button class="border-2 border-blue-500">
-					Ir al formulario
-				</button>
-			</L>
-		</Cont>
+		{
+			globalConfig.prayerFormsUrl &&
+			<Cont asCallout={true}>
+				<h3>¿Quieres que ore por algo?</h3>
+				<p>Si quieres que ore por algo en especial durante SEEK 2025, llena el siguiente formulario para que lo pueda tener presente en mi oración.</p>
+				<L href={globalConfig.prayerFormsUrl}>
+					<button class="border-2 border-blue-500">
+						Ir al formulario
+					</button>
+				</L>
+			</Cont>
+		}
 
 		<!-- Popup -->
 		<div class=`
@@ -100,22 +84,25 @@ const images_semestre = Array.from(await Astro.glob('../images/semestre/*.{jpg,j
 				duration-300
 				lg:w-2/3
 				bg-white p-6 pb-12 lg:p-12
-				rounded-t
+				rounded-t lg:rounded
 				flex flex-col gap-6
 			`>
-				<h3>
-					Moneypool
-				</h3>
+				{
+					globalConfig.moneypool &&
+					<h3>
+						Moneypool
+					</h3>
 
-				<p class="text-sm">
-					Puedes donar con tu tarjeta bancaria directamente, a través de Moneypool.
-				</p>
+					<p class="text-sm">
+						Puedes donar con tu tarjeta bancaria directamente, a través de Moneypool.
+					</p>
 
-				<a href="https://www.moneypool.mx/p/IeBnElA" target="_blank">
-					<button class="border-2 border-solid border-black">
-						Ir a Moneypool
-					</button>
-				</a>
+					<a href={ globalConfig.moneypool } target="_blank">
+						<button class="border-2 border-solid border-black">
+							Ir a Moneypool
+						</button>
+					</a>
+				}
 
 				<h3>Transferencia bancaria</h3>
 
@@ -123,8 +110,9 @@ const images_semestre = Array.from(await Astro.glob('../images/semestre/*.{jpg,j
 					Puedes depositarme a mi cuenta personal. En la descripción de la transferencia, pon tu nombre y el texto 'SEEK' para poder agradecerte.
 				</p>
 
-				<p>CLABE: <span class="code">012 180 01525621081 9</span></p>
-				<CopyButton text="Copiar la CLABE" value="012180015256210819" />
+				<p>Banco: <span class="code">{ globalConfig.transfer.bank }</span></p>
+				<p>CLABE: <span class="code">{ globalConfig.transfer.clabe.replace(/(\d{4})/g, '$1 ').trim() }</span></p>
+				<CopyButton text="Copiar la CLABE" value={globalConfig.transfer.clabe} />
 			</div>
 		</div>
 
