Added a client:load to the GoalDisplay component

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -50,7 +50,7 @@ import { Content as LastSeek } from '../customized/last_seek.mdx';
 		</Cont>
 
 		<ExpensesDisplay />
-		<GoalDisplay />
+		<GoalDisplay client:load />
 
 		<Cont>
 			<LastSeek />
