Added cover image, removed unnecesary files...

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -17,7 +17,7 @@ import { Content as LastSeek } from '../customized/last_seek.mdx';
 <!doctype html>
 <html lang="es">
 	<head>
-		<BaseHead title={SITE_TITLE} description={SITE_DESCRIPTION} />
+		<BaseHead title={SITE_TITLE} description={SITE_DESCRIPTION} image='/cover.png' />
 	</head>
 	<body class=`
 		flex flex-col gap-12
