--- a/src/components/ExpensesDisplay.astro
+++ b/src/components/ExpensesDisplay.astro
@@ -37,16 +37,15 @@ const uuid = '' + getID();
         Este año necesito { formatter.format(totalExpenses) } MXN para vivir SEEK 2025. Los gastos se distribuyen de la siguiente manera:
     </p>
 
-    <div class="flex gap-8 w-full">
+    <div class="flex gap-4 w-full">
         {
-            expenses.map((exp, index) => {
+            expenses.map(exp => {
                 return <div class="flex flex-col gap-2 items-center justify-end" style={`width: ${ sum(exp.data) / totalExpenses * 100 }%`}>
-                    <p class="text-sm text-center">{ exp.label }</p>
+                    <p class="text-xs text-center">{ exp.label }</p>
 
                     <div class:list={[
-                        "h-2 w-full",
-                        exp.color,
-                        index == 0 ? 'rounded-l-full' : index == expenses.length - 1 ? 'rounded-r-full' : ''
+                        "h-2 w-full rounded-full",
+                        exp.color
                     ]}></div>
 
                     <p class="text-xs text-center">
